Fix potions mergings bugs and update recipes